--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,8 @@
+# Copyright (c) 2025-2025 Clouds Studios <copyright@clouds-studios.com>
+# Licensed under the EUPL v. 1.2
 site_name: CloudsEvents
 site_url: https://docs.clouds-studios.com/cloudsevents
+dev_addr: 100.76.252.13:80
 copyright: <a href="https://www.clouds-studios.com"><b>Clouds Studios</b></a> &copy 2025-2025
 
 theme:
